Introduce null safety to models with Jspecify